--- a/style.css
+++ b/style.css
@@ -23,9 +23,7 @@
 
 
 *{
-	padding:0px;
 	margin:0px;
-	border: none;
 }
 
 /* Text */
@@ -159,6 +157,11 @@ header .bloc-logo{
 	
 	box-shadow: 0 0 2px black;
 }
+
+.bloc-left .actions-menu-secondaire {
+	cursor: pointer;
+}
+
 nav h2{
 	margin-top: 0;
 }
@@ -196,20 +199,30 @@ nav a b{
 /* SOUS-MENU*/
 .sous-menu{
 	position:relative;
-	top: 60px;
+	top: 85px;
 	right:25px;
 	border-radius: 0 50% 50% 0;
 	z-index:1;
 	width: 0px;
 	overflow: hidden;
-	text-align:left;
-	box-shadow: 5px 0 6px #888;
-	padding: 10px 0;
-	background: white;
 	
+	box-shadow: 5px 0 6px #888;
+	background: white;
+	height: 450px;
 }
 .sous-menu .menu-secondaire{
-	padding: 50px 0 50px 0;
+	padding: 40px 0 40px 20px;
+}
+
+.sous-menu .fermeture-sous-menu{
+	float: right;
+	position:relative;
+	left:5px;
+	cursor: pointer;
+}
+
+.sous-menu .onglets-content a{
+width: 280px;
 }
 
 /* CONTENT */
@@ -222,7 +235,7 @@ nav a b{
 	z-index:0;
 	text-align:left;
     min-height: 390px;
-    top: -500px;
+    top: -470px;
 	overflow: hidden;
 	margin: 0 10px -500px 10px;
 }
