--- a/style.css
+++ b/style.css
@@ -204,13 +204,11 @@ nav a b{
 	overflow: hidden;
 	
 	box-shadow: 5px 0 6px #888;
+	padding: 0 0;
 	background: white;
 	height: 450px;
 }
 .sous-menu .menu-secondaire{
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 	padding: 40px 0 40px 20px;
 }
 
@@ -223,7 +221,6 @@ nav a b{
 
 .sous-menu .onglets-content a{
 	width: 280px;
-	padding: 40px 0;
 }
 
 /* CONTENT */
