--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/*****************************/
-/* COMMUN A TOUTES LES PAGES */
-/*****************************/
 @media screen and (max-width: 1440px) {
 	header {
 		
@@ -100,9 +97,9 @@ header .bloc-logo{
 }
 
 
-/*************/
-/*  CONTENT  */
-/*************/
+/********************/
+/*  CONTENT GENERAL */
+/********************/
 #content {
     text-align: center;
 }
@@ -111,6 +108,10 @@ header .bloc-logo{
 	display: inline-block;
     vertical-align: top;
 }
+
+/*************/
+/* BLOC MENU */
+/*************/
 .bloc-left{
 	position:relative;
 	z-index: 2;
@@ -140,7 +141,7 @@ header .bloc-logo{
 	display:inline-block;
 	margin: 5px;
 }
-/* MENU */
+
 .bloc-left .onglets-content{
 	margin-left:15%;
 	width:85%;
@@ -190,8 +191,9 @@ nav a b{
 	border-radius: 0 50% 50% 50%;
 	box-shadow: 0 2px 5px black;
 }
-
-/* SOUS-MENU*/
+/*************/
+/* SOUS-MENU */
+/*************/
 .sous-menu{
 	position:relative;
 	top: 85px;
@@ -222,8 +224,9 @@ nav a b{
 .sous-menu .onglets-content a{
 	width: 280px;
 }
-
-/* CONTENT */
+/******************/
+/* CONTENT-CENTER */
+/******************/
 .bloc-center{
 	margin: 40px 0 40px 0;
 }
@@ -265,7 +268,9 @@ nav a b{
 	background:white;
 }
 
+/***********/
 /* SIDEBAR */
+/***********/
 .side {
   
     width: 15%;
@@ -402,105 +407,6 @@ background: -ms-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 
 background: linear-gradient(to bottom,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', endColorstr='#d1d360',GradientType=0 ); /* IE6-9 */
 
-}
-
-/******************/
-/*  Mini-GALERIE  */
-/******************/
-#mini-galerie{
-		width:150px;
-		height:150px;
-		overflow:hidden;
-		display: inline-block;
-}
-#mini-galerie #demoWrap{
-position:relative;
-width:300px;
-height:300px;
-}
-#mini-galerie #demoWrap a.ancre{
-display:none;
-}
-#mini-galerie #demoWrap #imgs{
-/*transition*/
--webkit-transition:all 1s ease;
-   -moz-transition:all 1s ease;
-    -ms-transition:all 1s ease;
-     -o-transition:all 1s ease;
-        transition:all 1s ease;
-}
-#mini-galerie #demoWrap #imgs ul li{
-position:relative;
-float:left;
-text-align:center;
-width:150px;
-height:310px;
-padding:30px 0 0 0;
-list-style:none;
-}
-#mini-galerie #demoWrap #liens ul{
-position:absolute;
-z-index:100;
-height:10px;
-width:48px;
-top:10px;
-left:50px;
-}
-#mini-galerie #demoWrap #liens ul li{
-position:relative;
-float:left;
-width:10px;
-height:10px;
-list-style:none;
-margin:0px 3px;
-}
-#mini-galerie #demoWrap #liens ul li a,
-#mini-galerie #demoWrap #wrap2:target ~ #liens ul li:nth-child(1) a{
-display:block;
-padding:10px 0 0 0;
-height:0;
-width:10px;
-overflow:hidden;
-background:#555;
-/*linear-gradient*/
-background:-webkit-gradient(linear,left top,left bottom,from(transparent),to(rgba(0,0,0,.8))),#888;
-background:-webkit-linear-gradient(transparent,rgba(0,0,0,.8)),#888;
-background:   -moz-linear-gradient(transparent,rgba(0,0,0,.8)),#888;
-background:    -ms-linear-gradient(transparent,rgba(0,0,0,.8)),#888;
-background:     -o-linear-gradient(transparent,rgba(0,0,0,.8)),#888;
-background:        linear-gradient(transparent,rgba(0,0,0,.8)),#888;
-/*border-radius*/
--webkit-border-radius:5px;
-   -moz-border-radius:5px;
-        border-radius:5px;
-/*box-shadow*/
--webkit-box-shadow:0px 0px 2px #1b1e22;
-   -moz-box-shadow:0px 0px 2px #1b1e22;
-        box-shadow:0px 0px 2px #1b1e22;
-}
-#mini-galerie #demoWrap #liens ul li a:hover,
-#mini-galerie #demoWrap #liens ul li a:focus{
-/*linear-gradient*/
-background:-webkit-gradient(linear,left top,left bottom,from(transparent),to(rgba(0,0,0,1))),#888;
-background:-webkit-linear-gradient(transparent,rgba(0,0,0,1)),#888;
-background:   -moz-linear-gradient(transparent,rgba(0,0,0,1)),#888;
-background:    -ms-linear-gradient(transparent,rgba(0,0,0,1)),#888;
-background:     -o-linear-gradient(transparent,rgba(0,0,0,1)),#888;
-background:        linear-gradient(transparent,rgba(0,0,0,1)),#888;
-}
-#mini-galerie #demoWrap #wrap1:target ~ #imgs{
-margin-left:0px;
-}
-#mini-galerie #demoWrap #wrap2:target ~ #imgs{
-margin-left:-150px;
-}
-#mini-galerie #demoWrap #liens ul li:nth-child(1) a,
-#mini-galerie #demoWrap #wrap1:target ~ #liens ul li a[href="#wrap1"],
-#mini-galerie #demoWrap #wrap2:target ~ #liens ul li a[href="#wrap2"]{
-
--webkit-box-shadow:0 -1px 0 rgba(255,255,255,.5) inset;
-   -moz-box-shadow:0 -1px 0 rgba(255,255,255,.5) inset;
-        box-shadow:0 -1px 0 rgba(255,255,255,.5) inset;
 }
 
 
