--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1439px) {
 	header {
-		
 		background: url(img/background_gite_810p.jpg) no-repeat, black;
 	}
 	footer{
@@ -8,6 +7,7 @@
 		background: url(img/background_gite_810p.jpg) no-repeat, black;
 	}
 }
+
 @media screen and (min-width: 1440px) {
 	header {
 		background: url(img/background_gite_1080p.jpg) no-repeat, black;
@@ -21,6 +21,10 @@
 
 *{
 	margin:0px;
+}
+
+img{
+	border: 0;
 }
 
 /* Text */
@@ -41,12 +45,15 @@ a{font-family: Ubuntu, sans-serif;}
 
 
 body {
-		margin:  auto;
+	margin:  auto;
 	background: #CECEC2;
-	min-width: 970px;
+	min-width: 1024px;
 	max-width: 1920px;
 }
 
+#OLD{
+	/*display: none;*/
+}
 .text-icon img, .text-icon span{
 	display: inline-block;
 	vertical-align: middle;
@@ -55,16 +62,13 @@ body {
 /****************/
 /*   HEADER     */
 /****************/
-header {
+#header {
    	text-align: center;
 	background-position: center top;
 	height: 300px;
 }
 
-.barre-top{
-	height: 0px;
-}
-header .bloc-titre{
+#header .bloc-titre{
 	display: inline-block;
 	vertical-align: top;
 	width: 320px;
@@ -73,23 +77,23 @@ header .bloc-titre{
 	top:40px;
 	right: 260px;
 }
-header .bloc-titre img{
+#header .bloc-titre img{
 	overflow: hidden;
 	width: 320px;
 	height:200px;
 	position:relative;
 }
-header .titre-fond{
+#header .titre-fond{
 	z-index: 20;
 }
-header .titre-anime{
+#header .titre-anime{
 	z-index: 25;
 	bottom:200px;
 }
-header .bloc-logo{
+#header .bloc-logo{
 	display: inline-block;
 	vertical-align: top;
-	width: 320px;
+	width: 300px;
 	
 	position: relative;
 	top: 60px;
@@ -100,11 +104,20 @@ header .bloc-logo{
 /********************/
 /*  CONTENT GENERAL */
 /********************/
+#wait{
+	margin: 50px auto;
+	border-radius: 50%;
+	background: white;
+	padding: 40px;
+	width: 120px;
+	height: 120px;
+}
+
 #content {
+	/*display: none;*/
     text-align: center;
 }
 .bloc-content{
-	visibility: hidden;
 	display: inline-block;
     vertical-align: top;
 }
@@ -298,6 +311,7 @@ nav a b{
 footer{
 	text-align: center;
 	background-position: center bottom;
+	min-height:510px; 
 }
 
 .footer-content{
@@ -323,105 +337,39 @@ footer .actions-site{
 	
 }
 
-/****************/
-/*  SearchForm  */
-/****************/
-#searchform {
+/***************/
+/*  BLOC-USER  */
+/***************/
+.bloc-user {
 	display: inline-block;
 	vertical-align: top;
-	text-align:left;
-	width:320px;
-	height: 37px;
-	
+
 	position:relative;
 	top:250px;
-	left: 10px;
+	right: 10px;
 }
-#searchform form input{
-    font-family: Ubuntu, sans-serif;
-    font-size:1.1em;   
-}
-#searchform form fieldset{
-    border:none;
-    padding: 0px;
-	width:395px;
-}
-#searchform input[type="text"]{
-border:none;
-margin-right: -4px;
-display: inline-block;
-vertical-align: middle;
-width:185px;
-height:37px;
-padding-left:10px;
-font-weight:bold;
-color:black;
-outline: none;
-
--webkit-box-shadow:0px 1px 1px #000 inset;
-   -moz-box-shadow:0px 1px 1px #000 inset;
-        box-shadow:0px 1px 1px #000 inset;
--webkit-border-radius:15px 0px 0px 15px;
-   -moz-border-radius:15px 0px 0px 15px;
-  	    border-radius:15px 0px 0px 15px;
-
-background: rgb(230,240,163); /* Old browsers */
-background: rgb(255,255,255); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(229,229,229,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-}
-#searchform input[type="submit"]{
-display: inline-block;
-vertical-align: middle;
-width:120px;
-height:37px;
-border:none;
-color:black;
-font-weight:bold;
-border-left: 1px groove black;
--webkit-border-radius:0 15px 15px 0;
-   -moz-border-radius:0 15px 15px 0;
-        border-radius:0 15px 15px 0;
-background: rgb(255,255,255); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(229,229,229,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-
-}
-#searchform input[type="submit"]:hover{
-background: rgb(229,230,150); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(229,230,150,1) 0%, rgba(209,211,96,1) 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(229,230,150,1)), color-stop(100%,rgba(209,211,96,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgba(229,230,150,1) 0%,rgba(209,211,96,1) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', endColorstr='#d1d360',GradientType=0 ); /* IE6-9 */
-
+.bloc-user p{
+	border-radius: 10px;
+	padding: 10px 20px 10px 20px;
+	background: white
 }
 
+.bloc-user a:hover{
+	border-bottom: 1px solid black;
+}
 
 /**********/
 /*  DATE  */
 /**********/
 .date{ 
 	position:relative;
-	padding:45px 14px 0px 0px;
+	padding:45px 14px 0 0px;
 	margin: auto;
 } 
 .date .month{
     text-transform: uppercase;
     font-size:25px;
-    margin: -5px 5px 0 5px;
+    margin: 0px 5px 10px 5px;
 }
 .date .day{
 	font-size:35px;
@@ -457,6 +405,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', end
 	padding: 7px; 
 	background: rgb(143,200,0);
 	border-radius: 50% 50% 50% 0;
+	height: 85px;
+	width: 85px;
 }
 .post .more-link{
 	display: block;
@@ -533,11 +483,3 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5e696', end
 	width: 110%;
 	height: 350px;
 }
-
-/****************/
-/*  ERREUR 404  */
-/****************/
-
-/***************/
-/*  ANIMATION  */
-/***************/
